# lightgbm_test

./: .gitignore  README.md  pyproject.toml
data/: dummy_tabular_data.csv
notebooks/: lightgbm_gpu_demo.ipynb
outputs/: classification_report.txt  feature_importance.csv  metrics.json
scripts/: build_lightgbm_cuda.sh  run_gpu_demo.sh
src/lightgbm_test/: train.py
