[project]
name = "lightgbm-test"
version = "0.1.0"
description = "LightGBM demo on synthetic tabular data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "lightgbm>=4.6.0",
  "pandas>=2.2.3",
  "scikit-learn>=1.6.1",
]

[project.scripts]
train-lightgbm = "lightgbm_test.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/lightgbm_test"]
